Muchos, muchoos cambios, cambios en el diseno tan plano que tenia antes, cambios en el codigo para que al menos tenga un poco de concordancia, y segun ya funciona el inicio de sesion aunque no se si sea como lo explico trevi, no subio creo el archivo para ver la documentacion de los inicios de sesion y al chile estaba bien muertote cuando explicooooo trevi no puedo dormir por el celular

--- a/templates/acercade.html
+++ b/templates/acercade.html
@@ -3,6 +3,7 @@
 {% block title %}Acerca de...{% endblock %}
 
 {% block content %}
+<script>document.body.className = 'bg-acercade';</script>
 <div class="container text-center mb-5">
     <h3 class="mb-4">Quien soy yo?</h3>
     
