--- a/templates/animales.html
+++ b/templates/animales.html
@@ -3,6 +3,7 @@
 {% block title %}Animales Exóticos{% endblock %}
 
 {% block content %}
+<script>document.body.className = 'bg-animales';</script>
 <div class="container text-center mb-5">
     <p class="my-4 px-3">En el planeta tierra encontramos una variedad inmensa de animales y seres vivos con cualidades únicas que los hacen sumamente especiales y distintos. Existen todo tipo de mamíferos, aves, peces o insectos que nos harán estremecer o enternecer, dependiendo de cuales sean nuestros gustos. Entre estas distintas especies podemos hablar de los animales exóticos. Para quienes no sepan qué es un animal exótico, se refiere a aquellos animales que no se encuentran dentro de su hábitat natural y potencial, por lo que son animales no autóctonos de la zona en la que viven</p>
     
