--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,9 @@
 {% block title %}Plantilla Base{% endblock %}
 
 {% block content %}
+<script>document.body.className = 'bg-inicio';</script>
 <div class="container text-center mb-5">
-    <h3 class="mb-4">Holas les habla LeBron James</h3>
+    <h3 class="mb-4">Hola soy el GOAT LeBron Jamez</h3>
     
     <div class="my-4">
         <img src="{{ url_for('static', filename='imgz/lebron1.png') }}" alt="Imagen del King James" class="img-fluid w-25">
@@ -24,7 +25,7 @@
         </div>
     </div>
     
-    <p class="my-4 px-3">Espero que les guste la pagina web, y que la disfruten tanto como yo disfruto jugar basquetbol</p>
+    <p class="my-4 px-3">Espero que les guste la pagina web, y que la disfruten tanto como yo disfruto de papear a fans de Michael Jordan</p>
     
     <div class="my-4">
         <img src="{{ url_for('static', filename='imgz/lebron2.png') }}" alt="Segunda imagen del King" class="img-fluid w-25">
