--- a/templates/maravillas.html
+++ b/templates/maravillas.html
@@ -3,6 +3,7 @@
 {% block title %}Maravillas del Mundo{% endblock %}
 
 {% block content %}
+<script>document.body.className = 'bg-maravillas';</script>
 <div class="container text-center mb-5">
     <p class="my-4 px-3">Las siete maravillas seleccionadas incluían la Gran Pirámide de Guiza (la más antigua de todas y la única que todavía se puede visitar), los Jardines Colgantes de Babilonia, el Templo de Artemisa en Éfeso, la Estatua de Zeus en Olimpia, el Mausoleo de Halicarnaso, el Coloso de Rodas y el Faro de Alejandría.
     Aunque hay ciertas dudas sobre la existencia real de algunos de los lugares mencionados por Antípatro de Sidón, no hay dudas sobre las nuevas siete maravillas del mundo moderno. Estas son destinos que se pueden visitar y experimentar en persona. En el año 2001, tras más de 90 millones de votos emitidos comunidad global, todo estaba preparado para revelar la lista de las siete maravillas modernas impresionantes. Solo un puñado selecto de candidaturas se ganaron la codiciada atención:</p>
