--- a/templates/vehiculos.html
+++ b/templates/vehiculos.html
@@ -3,6 +3,7 @@
 {% block title %}Vehículos Antiguos{% endblock %}
 
 {% block content %}
+<script>document.body.className = 'bg-vehiculos';</script>
 <div class="container text-center mb-5">
     <p class="my-4 px-3">Aún quedan románticos que gustan de pocas asistencias, direcciones duras y suavidad cuestionable.
     Todavía hay quienes prefieren arreglar con un par de herramientas, que someter el auto a un scanner.
