--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,14 @@
         <img src="https://images.cooltext.com/5743560.gif" width="613" height="78" alt="Desarrollo de Plantilla Base" class="img-fluid" />
         <nav>
             <ul class="nav justify-content-center mt-3">
+
+                <li class="nav-item">
+                    <a class="nav-link text-info-emphasis" href="{{ url_for('formulario') }}">Registrate</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-warning-emphasis" href="{{ url_for('iniciodesesion') }}">Inicio de Sesion</a>
+                </li> 
+
                 <li class="nav-item">
                     <a class="nav-link text-primary" href="{{ url_for('index') }}">Inicio</a>
                 </li>
