--- a/templates/formulario.html
+++ b/templates/formulario.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario - Facebook</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}Registarse{% endblock %}
+
+{% block content %}
+<script>document.body.className = 'bg-formulario';</script>
 <div class="container">
     <h1 class="text-center text-primary">Facebook</h1>
 </div>
@@ -122,9 +119,4 @@
         </div>
     </div>
 </div>
-    <footer class="bg-dark text-center py-3 mt-5">
-        <span class="text-white">&copy; GCCA - 5D - Programación - CETis 61</span>
-    </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+{% endblock %}
